src/cloudformation/neptune/graphistry.yml
AWSTemplateFormatVersion: "2010-09-09"

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    -
      Label:
        default: "Network Configuration"
      Parameters:
        - GraphAppKitVPC
        - GraphAppKitSubnet
    -
      Label:
        default: "Server Configuration"
      Parameters:
        - GraphAppKitKeyPair

Parameters:
  GraphAppKitKeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "Enter an EC2 Key Pair for this instance"
  GraphAppKitVPC:
    Type: AWS::EC2::VPC::Id
    Description: "Enter the VPC where Neptune is presently hosted. Ex: vpc-abc"
  GraphAppKitSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: "Enter a public subnet within the previously selected VPC that also has access to Neptune. Ex: subnet-123"
  InstanceType:
    Type: String
    Default: 'g4dn.xlarge'
    Description: "Enter a RAPIDS.ai-compatible GPU instance type. Ex: g4dn.xlarge"
  NeptuneReaderHost:
    Type: String
    Description: "Enter the Neptune Cluster Read Endpoint URL. Ex: abc.def.ghi.neptune.amazonaws.com"

Mappings: 
  RegionMap: 
    us-east-1: 
      "HVM64": "ami-0758d945357560324"
    us-east-2:
      "HVM64": "ami-088aaa8746bde2e21"
    us-west-1: 
      "HVM64": "ami-041526a3d02947394"
    us-west-2:
      "HVM64": "ami-01a5481ca3c8d8257"
    eu-central-1:
      "HVM64": "ami-0c3e601ddac853aba"
    eu-west-1: 
      "HVM64": "ami-0edc0fc6cb4efa908"
    eu-west-2:
      "HVM64": "ami-0f351900207433c32"
    eu-west-3:
      "HVM64": "ami-00ee1a79360375598"
    eu-north-1:
      "HVM64": "ami-0c90b099725351632"
    sa-east-1:
      "HVM64": "ami-09aa432a1a03a1459"

Resources:
  GraphAppKitSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Graphistry Graph App Kit Access 8501 22
      Tags: 
        - Key: "name"
          Value: "graph-app-kit-quicklaunch-a"
        - Key: "kind"
          Value: "graph-app-kit"
      VpcId: 
        Ref: GraphAppKitVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8501
        ToPort: 8501
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
  GraphAppKitEC2:
    Type: AWS::EC2::Instance
    Properties:
      Tags: 
        - Key: "name"
          Value: "graph-app-kit-quicklaunch-a"
        - Key: "kind"
          Value: "graph-app-kit"
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
      InstanceType: g4dn.xlarge
      SubnetId:
        Ref: GraphAppKitSubnet
      SecurityGroupIds:
      - 
        Ref: GraphAppKitSecurityGroup
      KeyName: 
        Ref: GraphAppKitKeyPair
      Tags:
        - 
          Key: Name
          Value: Graphistry-Graph-App-Kit
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            VolumeSize: '60'
            DeleteOnTermination: 'true'
            Encrypted: 'false'
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - "#!/bin/bash\n"
            - "set -ex\n"
            - "sudo usermod -a -G docker ubuntu\n"
            - "echo '===== System check'\n"
            - "nvidia-smi\n"
            - "echo '===== Downloading graph-app-kit'\n"
            - "cd /home/ubuntu\n"
            - "mkdir -p graph-app-kit/public\n"
            - "cd graph-app-kit/public\n"
            - "git clone https://github.com/graphistry/graph-app-kit.git\n"
            - "cp -r /home/ubuntu/graph-app-kit/public /home/ubuntu/graph-app-kit/private\n"
            - "echo '===== Running graph-app-kit bootstraps'\n"
            - "cd /home/ubuntu/graph-app-kit/public/graph-app-kit/src/cloudformation/neptune\n"
            - "./graphistry.sh \""
            - Ref: NeptuneReaderHost
            - "\"\n"
            - "/opt/aws/bin/cfn-signal -e $? --stack "
            - Ref: AWS::StackName
            - " --resource GraphAppKitEC2 --region "
            - Ref: AWS::Region
            - "\n"
    CreationPolicy:
      ResourceSignal:
        Count: 1
        Timeout: "PT20M"
